<!--

    Wire
    Copyright (C) 2018 Wire Swiss GmbH

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<resources>
    <string name="app_name">TestingGallery</string>

    <string name="action_settings">Settings</string>
    <string name="version">Version: </string>
    <string name="permissions_check">Permissions:</string>
    <string name="test_directory_check">Test directory:</string>
    <string name="check_result_unknown">Unknown</string>
    <string name="fix_button">Fix</string>
    <string name="testing_gallery_checks_title">Testing Gallery Checks</string>
    <string name="document_resolver_check">Default Gallery:</string>
    <string name="lock_screen_check">LockScreen:</string>
    <string name="notification_access_check">Notification Access:</string>
    <string name="brightness_check">Brightness:</string>
    <string name="stay_awake_check">Stay Awake:</string>
    <string name="default_video_recorder">Default Video recorder:</string>
    <string name="default_document_receiver">Default doc receiver:</string>
</resources>
